--- a/AI/AI/AI.vcxproj.filters
+++ b/AI/AI/AI.vcxproj.filters
@@ -21,10 +21,19 @@
     <ClCompile Include="Turnstile FSM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Turnstile.cpp">
+    <ClCompile Include="TurnstileState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TurnstileState.cpp">
+    <ClCompile Include="LockedState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UnlockedState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TurnstileGate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ViolationState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,10 +41,19 @@
     <ClInclude Include="TurnstileFSM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Turnstile.h">
+    <ClInclude Include="TurnstileState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TurnstileState.h">
+    <ClInclude Include="LockedState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UnlockedState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TurnstileGate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ViolationState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
