--- a/AIGameFramework/examples/WarGame/WarGame.vcxproj
+++ b/AIGameFramework/examples/WarGame/WarGame.vcxproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ExampleBehaviours.h" />
+    <ClInclude Include="LobsterAI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
