--- a/AIGameFramework/examples/WarGame/WarGame.vcxproj.filters
+++ b/AIGameFramework/examples/WarGame/WarGame.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="ExampleBehaviours.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LobsterAI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
