--- a/AIGameFramework/examples/WarGame/WarGame.vcxproj.filters
+++ b/AIGameFramework/examples/WarGame/WarGame.vcxproj.filters
@@ -13,10 +13,28 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Pathfinding">
+      <UniqueIdentifier>{067ae713-146d-48c1-ba20-57f559a6c73a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Pathfinding\ClosedList.cpp">
+      <Filter>Pathfinding</Filter>
+    </ClCompile>
+    <ClCompile Include="Pathfinding\OpenList.cpp">
+      <Filter>Pathfinding</Filter>
+    </ClCompile>
+    <ClCompile Include="Pathfinding\PathFindingApp.cpp">
+      <Filter>Pathfinding</Filter>
+    </ClCompile>
+    <ClCompile Include="Pathfinding\SearchLevel.cpp">
+      <Filter>Pathfinding</Filter>
+    </ClCompile>
+    <ClCompile Include="Pathfinding\SearchNode.cpp">
+      <Filter>Pathfinding</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -25,6 +43,21 @@
     </ClInclude>
     <ClInclude Include="LobsterAI.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Pathfinding\ClosedList.h">
+      <Filter>Pathfinding</Filter>
+    </ClInclude>
+    <ClInclude Include="Pathfinding\OpenList.h">
+      <Filter>Pathfinding</Filter>
+    </ClInclude>
+    <ClInclude Include="Pathfinding\PathFindingApp.h">
+      <Filter>Pathfinding</Filter>
+    </ClInclude>
+    <ClInclude Include="Pathfinding\SearchLevel.h">
+      <Filter>Pathfinding</Filter>
+    </ClInclude>
+    <ClInclude Include="Pathfinding\SearchNode.h">
+      <Filter>Pathfinding</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
