Wargame updated to 0.3

--- a/AIGameFramework/examples/WarGame/WarGame.vcxproj
+++ b/AIGameFramework/examples/WarGame/WarGame.vcxproj
@@ -58,7 +58,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAsManaged>false</CompileAsManaged>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <MultiProcessorCompilation>false</MultiProcessorCompilation>
     </ClCompile>
@@ -80,7 +80,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(ProjectDir)../../sdk;$(ProjectDir)../../yam2d/engine/external;$(ProjectDir)../../yam2d/engine/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CompileAsManaged>false</CompileAsManaged>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <MultiProcessorCompilation>false</MultiProcessorCompilation>
@@ -111,6 +111,14 @@
     <ClInclude Include="Pathfinding\PathFindingApp.h" />
     <ClInclude Include="Pathfinding\SearchLevel.h" />
     <ClInclude Include="Pathfinding\SearchNode.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\build\AIGameFramework.vcxproj">
+      <Project>{a6943ca9-81d9-424c-b6f9-ecef55c2c03e}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\yam2d\engine\build\win32_vs13\yam2d.vcxproj">
+      <Project>{48cda762-fea3-4ff9-3d05-b05d6038cad6}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
