--- a/AIGameFramework/examples/LobsterAI/LobsterAI.vcxproj
+++ b/AIGameFramework/examples/LobsterAI/LobsterAI.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -11,23 +11,23 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{3525369A-9F22-4F7F-B26E-D2BC7D2A74CD}</ProjectGuid>
+    <ProjectGuid>{1B24B42A-82E9-48C7-9BFC-9F032E005A0B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>WarGameStatic</RootNamespace>
+    <RootNamespace>LobsterAI</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
-    <CharacterSet>NotSet</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>NotSet</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -39,34 +39,19 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../PassCourse;../MikkoRomppainen;../JohnDoe;../LobsterAI;$(ProjectDir)../../sdk;$(ProjectDir)../../yam2d/engine/external;$(ProjectDir)../../yam2d/engine/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <CompileAsManaged>false</CompileAsManaged>
-      <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-      <RuntimeTypeInfo>true</RuntimeTypeInfo>
-      <MultiProcessorCompilation>false</MultiProcessorCompilation>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProjectDir)../../lib/$(Configuration);$(ProjectDir)../../lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>winmm.lib;AIGameFramework.lib;yam2d.lib;libEGL.lib;libGLES_cm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -74,46 +59,37 @@
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <Optimization>Disabled</Optimization>
+      <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../PassCourse;../MikkoRomppainen;../JohnDoe;../LobsterAI;$(ProjectDir)../../sdk;$(ProjectDir)../../yam2d/engine/external;$(ProjectDir)../../yam2d/engine/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <CompileAsManaged>false</CompileAsManaged>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
-      <RuntimeTypeInfo>true</RuntimeTypeInfo>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <MultiProcessorCompilation>false</MultiProcessorCompilation>
-      <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(ProjectDir)../../lib/$(Configuration);$(ProjectDir)../../lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>winmm.lib;AIGameFramework.lib;yam2d.lib;libEGL.lib;libGLES_cm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ExampleBehaviours.h" />
+    <ClCompile Include="LobsterAI.cpp" />
+    <ClCompile Include="Pathfinding\ClosedList.cpp" />
+    <ClCompile Include="Pathfinding\OpenList.cpp" />
+    <ClCompile Include="Pathfinding\PathFindingApp.cpp" />
+    <ClCompile Include="Pathfinding\SearchLevel.cpp" />
+    <ClCompile Include="Pathfinding\SearchNode.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JohnDoe\JohnDoe.vcxproj">
-      <Project>{4ad05824-0d1a-444d-97e7-ec7a31c1b606}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\LobsterAI\LobsterAI.vcxproj">
-      <Project>{1b24b42a-82e9-48c7-9bfc-9f032e005a0b}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\MikkoRomppainen\MikkoRomppainen.vcxproj">
-      <Project>{74a0e013-3733-406d-b92f-c7b8ccbfa0c4}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\PassCourse\PassCourse.vcxproj">
-      <Project>{e6d5f2bb-3054-499c-abe7-9f6dfe48ea4e}</Project>
-    </ProjectReference>
+    <ClInclude Include="LobsterAI.h" />
+    <ClInclude Include="Pathfinding\ClosedList.h" />
+    <ClInclude Include="Pathfinding\OpenList.h" />
+    <ClInclude Include="Pathfinding\PathFindingApp.h" />
+    <ClInclude Include="Pathfinding\SearchLevel.h" />
+    <ClInclude Include="Pathfinding\SearchNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
